force-app/main/default/objects/ProductManagement__c/ProductManagement__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para controlar os produtos que podem ser vendidos, stop de vendas e que cairão para aprovação</description>
    
    <label>Controle de produto</label>
    <nameField>
        <displayFormat>PMG-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controle de produtos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>