force-app/main/default/objects/ProductManagement__c/fields/AvailableInventory__c.field-meta.xml
<CustomField>
    <fullName>AvailableInventory__c</fullName>
    <description>Campo de totalização que soma o estoque físico com as compras e subtrai as vendas.</description>
    <formula>Inventory__c +  FutureInventory__c -  SalesInventory__c + Tolerance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo de totalização que soma o estoque físico com as compras e subtrai as vendas.</inlineHelpText>
    <label>Estoque Disponível</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>