force-app/main/default/objects/ProductManagement__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloquear Venda?</label>
    <type>Checkbox</type>
</CustomField>