force-app/main/default/objects/ProductManagement__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Controle de produtos</relationshipLabel>
    <relationshipName>Controle_de_produtos</relationshipName>
    <type>Lookup</type>
</CustomField>