force-app/main/default/objects/ProductManagement__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro de distribuição onde esta localizado o estoque.</description>
    <inlineHelpText>Centro de distribuição onde esta localizado o estoque.</inlineHelpText>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Saldo de estoque</relationshipLabel>
    <relationshipName>Controle_de_produtos</relationshipName>
    <type>Lookup</type>
</CustomField>