force-app/main/default/objects/ProductManagement__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data de Vigência Final</label>
    <type>Date</type>
</CustomField>