force-app/main/default/objects/ProductManagement__c/fields/FutureInventory__c.field-meta.xml
<CustomField>
    <fullName>FutureInventory__c</fullName>
    <label>Compra</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>