force-app/main/default/objects/ProductManagement__c/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Data Vigência Inicial</label>
    <type>Date</type>
</CustomField>