force-app/main/default/objects/ProductManagement__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Estoque</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>