force-app/main/default/objects/ProductManagement__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Controle de produtos</relationshipLabel>
    <relationshipName>Controle_de_produtos</relationshipName>
    <type>Lookup</type>
</CustomField>