force-app/main/default/objects/ProductManagement__c/fields/SalesInventory__c.field-meta.xml
<CustomField>
    <fullName>SalesInventory__c</fullName>
    <label>Venda</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>