force-app/main/default/objects/ProductManagement__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipe de Vendas</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Controle de produtos</relationshipLabel>
    <relationshipName>Controle_de_produtos</relationshipName>
    <type>Lookup</type>
</CustomField>