force-app/main/default/objects/ProductManagement__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para definir a quantidade de tolerância de produto com estoque zerado.</description>
    <label>Quantidade de Tolerância</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>