force-app/main/default/objects/ProductManagement__c/fields/UnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasurement__c</fullName>
    <label>Unidade de Medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>