force-app/main/default/objects/ProductManagement__c/recordTypes/ExclusionList.recordType-meta.xml
<RecordType>
    <fullName>ExclusionList</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para listas de exclusão</description>
    <label>Lista de exclusão</label>
</RecordType>