force-app/main/default/objects/ProductManagement__c/recordTypes/SalesStock.recordType-meta.xml
<RecordType>
    <fullName>SalesStock</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para estoque de vendas</description>
    <label>Estoque de Vendas</label>
</RecordType>