force-app/main/default/objects/ProductManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsActive__c</columns>
    <columns>InitialDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Crop__c</columns>
    <columns>Product2__c</columns>
    <columns>UnitMeasurement__c</columns>
    <columns>Inventory__c</columns>
    <columns>SalesInventory__c</columns>
    <columns>FutureInventory__c</columns>
    <columns>AvailableInventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>